feat: finalize dynamic Docker image setup and site copy

--- a/malock-site/index.html
+++ b/malock-site/index.html
@@ -48,19 +48,19 @@
 							<a href="page.html"><b>ABOUT US</b></a>
 						</li>
 						<li class="page_item page-item-31">
-								<a href="#programs/"><b>Services</b></a>
+								<a href=""><b>Services</b></a>
 						</li>
 						<li class="page_item page-item-57">
-								<a href="#projects/"><b>Projects</b></a>
+								<a href=""><b>Projects</b></a>
 						</li>
 						<li class="page_item page-item-59">
-								<a href="#articles/"><b>Articles</b></a>
+								<a href=""><b>Articles</b></a>
 						</li>
 						<li class="page_item page-item-62">
-							<a href="#gallery/"><b>Gallery</b></a>
+							<a href=""><b>Gallery</b></a>
 						</li>
 						<li class="page_item page-item-64">
-							<a href="#contact-us/"><b>Contact us</b></a>
+							<a href=""><b>Contact us</b></a>
 						</li>
         			</ul>
         		</div>
