--- a/malock-site/page.html
+++ b/malock-site/page.html
@@ -42,25 +42,25 @@
          		<div class="main-nav navbar-collapse collapse">
          			<ul class="select">
 			        	<li  class="current_page_item">
-			            	<a href="#"><b>HOME</b></a>
+			            	<a href="index.html"><b>HOME</b></a>
 			            </li>
 			            <li class=" page-item-26">
-							<a href="#about-us/"><b>ABOUT US</b></a>
+							<a href="page.html"><b>ABOUT US</b></a>
 						</li>
 						<li class="page_item page-item-31">
-								<a href="#programs/"><b>Services</b></a>
+								<a href=""><b>Services</b></a>
 						</li>
 						<li class="page_item page-item-57">
-								<a href="#projects/"><b>Projects</b></a>
+								<a href=""><b>Projects</b></a>
 						</li>
 						<li class="page_item page-item-59">
-								<a href="#articles/"><b>Articles</b></a>
+								<a href=""><b>Articles</b></a>
 						</li>
 						<li class="page_item page-item-62">
-							<a href="#gallery/"><b>Gallery</b></a>
+							<a href=""><b>Gallery</b></a>
 						</li>
 						<li class="page_item page-item-64">
-							<a href="#contact-us/"><b>Contact us</b></a>
+							<a href=""><b>Contact us</b></a>
 						</li>
         			</ul>
         		</div>
